email was wrong on the web template

--- a/ui/html/display.time.tmpl
+++ b/ui/html/display.time.tmpl
@@ -11,7 +11,7 @@
      <p> Welcome to raymond's website</p>   
     <p> the time is : {{.}}</p>
     </header>
-    <footer><p> <a href="mailto:sirraymondarzu@gailmcom"> Raymond's email</a></p></footer>
+    <footer><p> <a href="mailto:sirraymondarzu@gail.com"> Raymond's email</a></p></footer>
     
 </body>
 </html>
